--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -94,7 +94,7 @@ For the stochastic SEIIaR model we follow essentially the same line of thought a
 		P_{I_a\to R} &= 1- \exp{(-\Delta t/\tau_I)}, 
 	\end{align}
 \end{subequations}
-with the different parameters $r_a,r_s,f_a,f_s,\tau_E,\tau_I$ given in \cite{sheet}. As before, 
+with the different parameters $r_a,r_s,f_a,f_s,\tau_E,\tau_I$ given in table (1) in \cite{sheet}. As before, 
 \begin{subequations}
 	\begin{align*}
 		\Delta_{S\to E  } &= \mathcal{B}(S,P_{S \to E}) \\
@@ -116,6 +116,6 @@ where $\mathcal{M}$ denotes a multinomial distribution, as described in \cite{sh
 		R(t + \Delta t) &= R(t) + \Delta_{I_a \to R} + \Delta_{I \to R}. \\
 	\end{align}
 \end{subequations}
-To denote a state of the system, I will use $\mathbf{X} = [S,E,I,I_a,R]^T$. 
+To denote a state of the system, I will use $\mathbf{v} = [S,E,I,I_a,R]^T$. When we eventually come to the commuter model, I will solve these equations for each group of people in the population structure. In that case, I will refer to $\mathbf{X}$ as a state of the system, which is the state $\mathbf{v}$ for all of the groups of people.  
 
-\vspace{2cm}
+\vspace{1cm}
