--- a/tex/problem2C.tex
+++ b/tex/problem2C.tex
@@ -18,7 +18,7 @@ The time-development of all the variables in the SEIIaR model is shown in figure
 	\label{fig:SEIIaR_compare}
 \end{figure}
 
-One prominent feature to notice here, is that the process overall seems to be \textit{slower}, in the sense that it takes longer time for people to get infected and eventually recover, but the asymptotic behaviours seem to align quite closely. This is probably due to the fact that this model includes a period in which people are infected but not yet able to infect anybody else: an incubation period of typical length $\tau_E = 3 \, \mathrm{days}$. This will naturally delay the process, but it should not affect the asymptotic behaviour. The peak of the infected fraction is also seen to be slightly lower. This is also a result of this delay period making the infections more spread out in time. Ultimately, this shows that the SEIIaR model is more realistic in the sense that people do not get sick right away, and that the behaviour agrees with our expectations. Another thing to mention is that the fraction of infected asymptomatic people $I_a$ are always less than the fraction of infected symptomatic people $I$. This is as expected since $f_a < f_s$ and $r_a < r_s$.
+One conspicuous feature to notice here, is that the process overall seems to be \textit{slower}, in the sense that it takes longer time for people to get infected and eventually recover, but the asymptotic behaviours seem to align quite closely. This is probably due to the fact that this model includes a period in which people are infected but not yet able to infect anybody else: an incubation period of typical length $\tau_E = 3 \, \mathrm{days}$. This will naturally delay the process, but it should not affect the asymptotic behaviour. The peak of the infected fraction is also seen to be slightly lower. This is also a result of this delay period making the infections more spread out in time. Ultimately, this shows that the SEIIaR model is more realistic in the sense that people do not get sick right away, and that the behaviour agrees with our expectations. Another thing to mention is that the fraction of infected asymptomatic people $I_a$ are always less than the fraction of infected symptomatic people $I$. This is as expected since $f_a < f_s$ and $r_a < r_s$.
 
 To test that the implementation is correct --- by comparing with the deterministic and stochastic SIR model --- we adjust the parameters of the SEIIaR to $\beta = 0.25$, $r_s = 1$, $r_a = 1$, $\tau_E = 0$, $\tau_I= 10$ and start with $10$ out of $100 \, 000$ people initially infected. The results of doing $1000$ such simulations and performing the average of the stochastic models is shown in figure \ref{fig:comparison_SIR}. This shows that the two stochastic models are very similar, as expected. Furthermore we see that there seems to be a slight delay of the (mean of the) stochastic models compared to the deterministic one. This is however as expected, since only in the limit of $\Delta t\to 0$ \textit{and (crucially)} $N\to \infty$ does the stochastic SIR model coincide with the deterministic one, as discussed in the introduction in section \ref{sec:stochsirtheory}. Since we use populations of size $N = 10^5$ we must naturally expect such a deviation, despite the fact that we are using a \textit{small} time step and take the average of many simulations. This also emphasises the fact that using the deterministic model as a reference solution for determining the step length for the stochastic model(s) is probably not a good idea, since we don't even expect them to be equal when $\Delta t \to 0$, for finite $N$. 
 %Furthermore, we also see that the overall process seems slightly delayed for the stochastic models compared to the deterministic. I am not quite sure what causes this, but I suspect that it might have something to do with the deterministic model, we can use the value of $\mathbf{f}$ in equation \eqref{eq:sir_vect} at times in between $t$ and $t+\Delta t$ to compute the value of $\mathbf{v}$, whereas the stochastic model only resolves time modulo intervals of length $\Delta t$.
